2008-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/preview.c (WritePreviewImage): Solarize requires a
	threshold argument.
	* coders/vid.c (WriteVIDImage): Eliminate memory leak.
	* magick/montage.c (MontageImages): Fix continued use of freed
	memory.

2008-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: With excessive maintenance releases, the library
	age portion of MAGICK_LIB_VERSION was overflowing its allotted
	space.  This resulted in 1.1.X releases reporting the wrong
	MagickLibVersion as of 1.1.10.  Fix this by supporting up to 99
	values for each field.

2008-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix passing the --with-windows-font-dir option via
	DISTCHECK_CONFIG_FLAGS.
	* magick/command.c (ConjureImageCommand): Return status was
	inverted so one was returned for command success rather than zero.

2008-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c: Applied MSL patch from graphicsmagick-bugs list to
	correct handling of geometry x,y values by setting gravity
	attribute to ForgetGravity.

2008-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Restore original
	client name for each loop so that it is not extended further for
	each iteration.

2008-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/{rwblob.c, rwfile.c}: use DestroyImageList() rather than
	DestroyImage().

2008-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (quantize): Error measurement support was
	being performed incorrectly.  SyncImage() is not needed here.

2008-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageInfo): Extend the list of extensions to
	exclude to include all virtual delegates and coders for
	pseudo-formats.  Synced up with implementation from 1.2 branch.

2008-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
